# aemterliste_rs

./: .gitignore  Cargo.toml  Dockerfile  deploy.sh
data/: aemtermails.txt  mailmanmails.txt  mails.txt
src/: main.rs
