[package]
name = "aemterliste_rs"
version = "0.1.0"
authors = ["Christopher Kaag <christopher.kaag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "*" }
maud = { version = "*", features = ["rocket"] }
reqwest = "*"
error-chain = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
