[package]
name = "aemterliste_rs"
version = "0.1.0"
authors = ["Christopher Kaag <christopher.kaag@gmail.com>"]
edition = "2018"


[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1


[dependencies]
actix-web = "4"
maud = { version = "*", features = ["actix-web"] }
reqwest = "*"
chrono = "*"
error-chain = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
